# muse_mcl_2d

./: .gitlab-ci.yml  clone_dependencies_github.sh  clone_dependencies_gitlab.sh
muse_mcl_2d/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d/cmake/: muse_mcl_2d_install_dependencies.cmake
muse_mcl_2d/msg/: SampleMsg.msg  SampleSetMsg.msg
muse_mcl_2d/src/density/: mean_centered_sample_density_2d.cpp  sample_clustering_2d.hpp  sample_density_data_2d.hpp  sample_indexation_2d.hpp  simple_sample_density_2d.cpp  weighted_sample_density_data_2d.hpp
muse_mcl_2d/src/instance/: sample_set_publisher_2d.cpp  state_publisher_2d.cpp
muse_mcl_2d/src/node/: muse_mcl_2d_node.cpp  muse_mcl_2d_node.h  sample_set_publisher_2d.cpp  sample_set_publisher_2d.h  state_publisher_2d.cpp  state_publisher_2d.h
muse_mcl_2d/src/resampling/: kld_2d.cpp  kld_augmented_2d.cpp  local_regeneration_kld_2d.cpp  multinomial.cpp  residual_2d.cpp  stratified_2d.cpp  systematic_2d.cpp  wheel_2d.cpp
muse_mcl_2d/src/sampling/: normal_2d.cpp  normal_sampling_2d.cpp  uniform_all_maps_2d.cpp  uniform_primary_map_2d.cpp
muse_mcl_2d/src/scheduling/: cfs.cpp  cfs_drop_statistic.cpp  cfs_laggy.cpp  cfs_rate.cpp  dummy.cpp  rate.cpp  rate_drop_statistic.cpp
muse_mcl_2d/src/tools/: plot_weights.hpp  statistics_plotter.cpp
muse_mcl_2d/srv/: PoseInitialization.srv
muse_mcl_2d/test/: benchmark_math.cpp  perf_runtimes_math_operations.cpp  plugins.cpp  plugins.test  test_bounding_box2d.cpp  test_box_muller.cpp  test_transform2d.cpp
muse_mcl_2d_gridmaps/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_gridmaps/src/maps/: binary_gridmap.cpp  distance_gridmap.cpp  likelihood_field_gridmap.cpp  probability_gridmap.cpp
muse_mcl_2d_gridmaps/src/models/: beam_model.cpp  beam_model.h  beam_model_amcl.cpp  beam_model_amcl.h  beam_model_amcl_normalized.cpp  beam_model_amcl_normalized.h  beam_model_log.cpp  beam_model_log.h  beam_model_mle.cpp  beam_model_mle.h  beam_model_parameter_estimator.cpp  beam_model_parameter_estimator.h  likelihood_field_model.cpp  likelihood_field_model.h  likelihood_field_model_amcl.cpp  likelihood_field_model_amcl.h  likelihood_field_model_amcl_normalized.cpp  likelihood_field_model_amcl_normalized.h  likelihood_field_model_log.cpp  likelihood_field_model_log.h  likelihood_field_model_pc.cpp  likelihood_field_model_pc.h  likelihood_field_model_pc_log.cpp  likelihood_field_model_pc_log.h  likelihood_field_prob_model_amcl.cpp  likelihood_field_prob_model_amcl.h
muse_mcl_2d_gridmaps/src/providers/: binary_gridmap_load_provider.cpp  binary_gridmap_load_provider.h  binary_gridmap_provider.cpp  binary_gridmap_provider.h  binary_gridmap_service_provider.cpp  binary_gridmap_service_provider.h  distance_gridmap_load_provider.cpp  distance_gridmap_load_provider.h  distance_gridmap_provider.cpp  distance_gridmap_provider.h  distance_gridmap_service_provider.cpp  distance_gridmap_service_provider.h  likelihood_field_gridmap_load_provider.cpp  likelihood_field_gridmap_load_provider.h  likelihood_field_gridmap_provider.cpp  likelihood_field_gridmap_provider.h  likelihood_field_gridmap_service_provider.cpp  likelihood_field_gridmap_service_provider.h  probability_gridmap_load_provider.cpp  probability_gridmap_load_provider.h  probability_gridmap_provider.cpp  probability_gridmap_provider.h  probability_gridmap_service_provider.cpp  probability_gridmap_service_provider.h
muse_mcl_2d_gridmaps/test/: perf_runtimes_exp.cpp  perf_runtimes_get_range.cpp  plugins.cpp  plugins.test
muse_mcl_2d_ndt/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_ndt/src/maps/: flat_gridmap_2d.cpp  gridmap_2d.cpp  gridmap_3d.cpp  occupancy_gridmap_2d.cpp  occupancy_gridmap_3d.cpp
muse_mcl_2d_ndt/src/models/: gridmap_2d_likelihood_field_model.cpp  gridmap_3d_likelihood_field_model.cpp  ndt_2d.cpp  ndt_2d.h  occupancy_gridmap_2d_likelihood_field_model.cpp  occupancy_gridmap_3d_likelihood_field_model.cpp
muse_mcl_2d_ndt/src/providers/: binary_gridmap_provider.cpp  binary_gridmap_service_provider.cpp  binary_occupancy_gridmap_provider.cpp  binary_occupancy_gridmap_service_provider.cpp  distance_gridmap_provider.cpp  distance_gridmap_service_provider.cpp  distance_occupancy_gridmap_provider.cpp  distance_occupancy_gridmap_service_provider.cpp  likelihood_field_gridmap_provider.cpp  likelihood_field_gridmap_service_provider.cpp  likelihood_field_occupancy_gridmap_provider.cpp  likelihood_field_occupancy_gridmap_service_provider.cpp  ndt_flat_gridmap_2d_provider.cpp  ndt_flat_gridmap_2d_provider.h  ndt_gridmap_2d_provider.cpp  ndt_gridmap_2d_service_provider.cpp  ndt_gridmap_3d_provider.cpp  ndt_gridmap_3d_service_provider.cpp  ndt_occupancy_gridmap_2d_provider.cpp  ndt_occupancy_gridmap_2d_service_provider.cpp  ndt_occupancy_gridmap_3d_provider.cpp  ndt_occupancy_gridmap_3d_service_provider.cpp  probability_gridmap_provider.cpp  probability_gridmap_service_provider.cpp  probability_occupancy_gridmap_provider.cpp  probability_occupancy_gridmap_service_provider.cpp
muse_mcl_2d_ndt/test/: perf_runtimes_distance_transform.cpp  perf_runtimes_exp.cpp  plugins.cpp  plugins.test
muse_mcl_2d_odometry/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_odometry/src/models/: differential_drive.cpp  differential_drive.h  differential_drive_abs.cpp  differential_drive_abs.h  differential_drive_box_muller.cpp  differential_drive_uncorrected.cpp  omni_drive.cpp  omni_drive.h
muse_mcl_2d_odometry/test/: perf_runtimes_line_iterator.cpp  plugins.cpp
muse_mcl_2d_vectormaps/: CMakeLists.txt  package.xml  plugins.xml
muse_mcl_2d_vectormaps/src/models/: beam_model_amcl_oriented_grid_parallel.cpp  beam_model_amcl_oriented_grid_parallel.h  beam_model_amcl_oriented_grid_vector.cpp  beam_model_amcl_oriented_grid_vector.h  beam_model_amcl_vector.cpp  beam_model_amcl_vector.h  beam_model_vector.cpp  beam_model_vector.h  likelihood_field_model_amcl_oriented_grid_vector.cpp  likelihood_field_model_amcl_oriented_grid_vector.h  likelihood_field_model_amcl_vector.cpp  likelihood_field_model_amcl_vector.h  (+2 more)
(+95 files in other folders)
