<?xml version="1.0"?>
<package format="2">
    <name>muse_mcl_2d_gridmaps</name>
    <version>0.0.4</version>
    <description>The muse_mcl_2d_gridmaps package</description>

    <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
    <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>muse_mcl_2d</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rostest</depend>
    <depend>tf</depend>
    <depend>cslibs_math_2d</depend>
    <depend>cslibs_gridmaps</depend>
    <depend>cslibs_plugins_data</depend>

    <export>
        <muse_mcl_2d plugin="${prefix}/plugins.xml" />
    </export>
</package>
