<?xml version="1.0"?>
<package format="2">
  <name>muse_mcl_2d_ndt</name>
  <version>0.0.6</version>
  <description>The muse_mcl_2d_ndt package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>muse_mcl_2d</depend>
  <depend>muse_mcl_2d_gridmaps</depend>
  <depend>cslibs_ndt_2d</depend>
  <depend>cslibs_math_2d</depend>
  <depend>cslibs_ndt_3d</depend>
  <depend>cslibs_math_3d</depend>
  <depend>cslibs_gridmaps</depend>
  <depend>cslibs_plugins_data</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <muse_mcl_2d plugin="${prefix}/plugins.xml" />
  </export>
</package>
